--- a/Capstone/client/src/index.css
+++ b/Capstone/client/src/index.css
@@ -1,13 +1,62 @@
-body {
+/* Open Sans google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+/* font-family: 'Open Sans', sans-serif; */
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+  box-shadow: 0px 5px 9px #888888;
 }
+
+.footer{
+  font-family: 'Open Sans', sans-serif;
+  align-items: center;
+  justify-content: center;
+  color: #535252;
+}
+.footer h6{
+
+  font-weight: 600;
+
+}
+.footer h6{
+
+}
+
+/* LOGIN FORM CSS */
+.homepage {
+  /* width: 100%; */
+ 
+}
+
+.homepage .login-form{
+  box-shadow: 0px 5px 9px #888888;
+width: 30%;
+padding: 2%;
+margin-top: 5%;
+color: #535252;
+margin-left: 5%;
+
+}
+
+.homepage .login-form button{
+  background-color: rgb(73, 194, 235) !important;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  border: none;
+  width: 100%;
+}
+
+.homepage .carousel{
+  /* padding: 4%; */
+ margin-left: 8%;
+ margin-top: 5%;
+  
+}
+
+
